--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2575,107 +2575,107 @@ stories:
   domain: http://www.lampasasdispatchrecord.com/
   link: https://www.lampasasdispatchrecord.com/content/house-blaze-may-be-connected-string-past-fires-0
 images:
-- name: old-granary-field-oldhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-far-away.jpg
-- name: old-granary-field-oldhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-space-pizza.jpg
-- name: oldsmallboat-oldsmallboat-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crabapple.jpg
-- name: blossombar-smooth-ride-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-00-00.jpg
-- name: oldhouse-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sand-paper.jpg
-- name: fence-mexico-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crunch-paper.jpg
-- name: oldhouse-oldhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-storm.jpg
-- name: oldhouse-oldhouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse.jpg
-- name: blossombar-colorful-blocks-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-blocks-file-00-00-50-62.jpg
-- name: docks-docks-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-monet-one.jpg
-- name: mediterranean-mediterranean-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-brush.jpg
-- name: powerlines-power-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colorful-dream.jpg
-- name: bluelake-colorful-blocks-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-00-00.jpg
-- name: containership-containership-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-brush.jpg
-- name: statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
-- name: trucksilo-trucksilo-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-monet-one.jpg
-- name: aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
-- name: ellis-island-ellisisland-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crafty-painting.jpg
-- name: bluelake-blue-granite-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-granite-file-00-00-00-00.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-- name: rockingchair-rockingchair-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-yellow-collage.jpg
-- name: aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
-- name: lincoln-memorial-lincolnmemorial-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-far-away.jpg
-- name: dragon-desert-desert-dragon-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-pablo-blue.jpg
-- name: ellis-island-ellisisland-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-atari-asteroids.jpg
-- name: berlinwall2-berlinwall-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-granite.jpg
-- name: old-gas-pumps-oldgaspumps-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
-- name: old-barn-old-barn-1500-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-pond.jpg
-- name: razorwire-DSC-0080-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-far-away.jpg
-- name: aws-s3-stories-yellow-tree-in-the-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-yellow-tree-in-the-rocks.jpg
-- name: aws-s3-stories-legalstatue-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-legalstatue-light-dali.jpg
-- name: server-cloud-server-racks-clouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-gred-mash.jpg
-- name: rockingchair-rockingchair-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gred-mash.jpg
-- name: carry-load-carryload-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-emily-carr.jpg
-- name: mosaic-face-mosaic-face-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-marcel-duchamp.jpg
-- name: windowmountain-window-mountain-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colorful-dream.jpg
-- name: christianity-christianity-under-construction-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-jap-wav-pr.jpg
-- name: rain-princess-P6210065.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P6210065.jpg
-- name: oldhouse-oldhouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
-- name: powerlines-power-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-satan-red.jpg
-- name: border-fence-border-fence-on-hill-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-creativity.jpg
-- name: aws-s3-stories-christianity-under-construction-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-copper-circuit.jpg
-- name: window-window-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
-- name: border-fence-border-fence-on-hill-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-graham-sutherland.jpg
-- name: yosemite-yosemite-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-marcel-duchamp.jpg
-- name: amusement-park-amusement-park-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crabapple.jpg
-- name: locked-up-steam-lock-up-steam-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-plentiful.jpg
-- name: fence-fence-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-mucha-mult.jpg
-- name: oldcabin-oldcabin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-plentiful.jpg
-- name: oldcabin-store-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crunch-paper.jpg
-- name: old-house-oldhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-creativity.jpg
+- name: birdhouse-birdhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-sunday.jpg
+- name: gypsy-wagon-gypsywagon-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-pablo-blue.jpg
+- name: udnie-IMG_4564.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4564.jpg
+- name: border-fence-border-fence-on-hill-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-deep-connections.jpg
+- name: old-school-house-old-schoolhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
+- name: server-cloud-server-racks-door-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-attack-planes.jpg
+- name: oldcabin-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-smooth-ride.jpg
+- name: dc-statue-dcstatue-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dali-two.jpg
+- name: paris-paris-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-yellow-collage.jpg
+- name: mediterranean-mediterranean-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-plentiful.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+- name: border-crossing-bordercrossing-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-blocks.png
+- name: bluelake-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-00-00.jpg
+- name: catacombs-catacombs-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-dali.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+- name: mediterranean-mediterranean-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-pond.jpg
+- name: white-house-lawn-white-house-window-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-oily-mcoilface.jpg
+- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+- name: berlinwall2-berlinwall-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-green-zuma.jpg
+- name: yosemite-yosemite-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dali-three.jpg
+- name: aws-s3-stories-new-machine-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-atari-missle.jpg
+- name: aws-s3-smithriver-smithriver-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still-600.jpg
+- name: window-window-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-marcel-duchamp.jpg
+- name: containership-containership-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-creativity.jpg
+- name: server-cloud-server-racks-clouds-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-far-away.jpg
+- name: border-crossing-bordercrossing-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alberto-giacometti.png
+- name: oldhouse-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-light-dali.jpg
+- name: amusement-park-amusement-park-2-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-nazi-poster.jpg
+- name: aws-s3-stories-border-traffic.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+- name: beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+- name: adam-smith-adam-smith-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-deep-connections.jpg
+- name: adam-smith-adam-smith-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-satan-red.jpg
+- name: store-on-corner-store-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-internet-numbers.jpg
+- name: rockingchair-rockingchair-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colorful-dream.jpg
+- name: lincoln-memorial-lincolnmemorial-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-creativity.jpg
+- name: oldroad-old-road-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-collage.jpg
+- name: curtain-curtain-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-really-hot.jpg
+- name: oldhotel-oldhotel-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-post-modern.jpg
+- name: blossombar-crafty-painting-file-00-00-50-15.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-15.jpg
+- name: razorcliff-razorcliff-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-yellow-collage.jpg
+- name: containership-containership-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-gred-mash.jpg
+- name: stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: border-fence-border-fence-on-hill-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-light-dali.jpg
+- name: meadowbutterfly-meadow-butterfly-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-post-modern.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
+- name: nazi-invasion-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8494.jpg
+- name: sand-hand-sand-hand-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-rain.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
+- name: bluelake-hot-spicy-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-00-38-67.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sunday.jpg
 ---
 Freshman Ellis Ready To Make Bold Impact.&nbsp;Elisabeth Moss's Fashion Exception.&nbsp;Vehicle Crash Reported On Watkins Road.&nbsp;Coleman Says He Expects Tribe To Make The Playoffs This Fall.&nbsp;Chair Announces Interim Appointment At Central Vermont Chamber.&nbsp;City Adopts Changes To Utility Collection Policy.&nbsp;Hosparus In Need Of Care Blankets.&nbsp;House Committee Files Lawsuit Over Trump Tax Returns.&nbsp;
